...
    return JsonObject(
        buildMap {
            put("type", JsonPrimitive(if (export) "$CSV_EXPORT_PACKAGE.AccountRulesExport" else "$CSV_PACKAGE.AccountRulesMapping"))
            put("fieldType", obj.getValue("fieldType"))
            put("rules", JsonArray(rules))
            if (export) {
                put("defaultCategoryName", category ?: JsonPrimitive("Uncategorized"))
            } else {
                category?.let { put("defaultCategoryId", it) }
            }
        },
    )
}
...
